name:                matchable
version:             0.1.2
synopsis:            A type class for Matchable Functors.
description:         This package provides a type class @Matchable@, which represents
                     @zipMatch@ operation which can zip two values if these two have
                     exactly same shape.
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
category:            Functors
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/viercc/matchable
  branch:   master

library
  hs-source-dirs:       src
  exposed-modules:      Data.Matchable
                      , Data.Matchable.TH
                      , Data.Bimatchable
  build-depends:        base                 >=4.9       && <5,
                        base-orphans         >=0.6,
                        containers           >=0.5       && <0.7,
                        base-containers-orphans >=0.1.0.0,
                        tagged               >=0.8       && <0.9,
                        hashable             >=1.0.1.1   && <1.3,
                        unordered-containers >=0.2.6     && <0.3,
                        vector               >=0.10.9.0  && <0.13,
                        template-haskell >= 2.4 && < 2.15,
                        th-abstraction
  ghc-options:          -Wall
  default-language:     Haskell2010

test-suite examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             example.hs
  build-depends:       base, containers, matchable, hspec
  default-language:    Haskell2010

