name:                matchable
version:             0.1.2.1
synopsis:            A type class for Matchable Functors.
description:         This package defines a type class @Matchable@, providing
                     @zipMatch@ operation for zipping two values of any container-like
                     functor type.
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
category:            Functors
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md
cabal-version:       2.0
tested-with:         GHC ==9.2.8, GHC ==9.4.8, GHC ==9.6.6, GHC ==9.8.2, GHC ==9.10.1

source-repository head
  type:     git
  location: https://github.com/viercc/matchable
  branch:   master

library
  hs-source-dirs:       src
  exposed-modules:      Data.Matchable
                      , Data.Bimatchable
                      , Data.Functor.Classes.Orphans
  build-depends:        base                 >=4.10      && <5,
                        containers           >=0.5.10.2  && <0.8,
                        tagged               >=0.8       && <0.9,
                        hashable             >=1.0.1.1   && <1.6,
                        unordered-containers >=0.2.6     && <0.3,
                        vector               >=0.10.9.0  && <0.14,
                        generically          >=0.1
  ghc-options:          -Wall
  default-language:     Haskell2010

test-suite matchable-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             example.hs
  build-depends:       base, containers, matchable, hspec
  default-language:    Haskell2010

