name:                matchable-examples
version:             0.1.0.0
homepage:            https://github.com/viercc/matchable/example#readme
license:             BSD3
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           Koji Miyazato
category:            Tutorial
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable matchable-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Unification, MiniProlog
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 5
                     , containers
                     , matchable
                     , free

